Updating incident data

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">10:12 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Sick</td>
             <td data-label="Street Name">ELLIS FORK RD</td>
             <td data-label="City">CHAPMANVILLE</td>
-            <td data-label="Cross Streets">NORTH FORK RD (48.0 feet) and FERRELL BR (0.5 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Cross Streets">FERRELL BR (49.5 feet) and NORTH FORK RD (0.5 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
             </tbody>
