--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
           <tr>
             <td data-label="Time Reported">10:12 AM</td>
             <td data-label="Incident">Sick</td>
-            <td data-label="Street Name">ELLIS FORK RD</td>
+            <td data-label="Street Name">NORTH FORK RD</td>
             <td data-label="City">CHAPMANVILLE</td>
-            <td data-label="Cross Streets">FERRELL BR (49.5 feet) and NORTH FORK RD (0.5 miles)</td>
+            <td data-label="Cross Streets">ELLIS FORK RD (40.1 feet) and RYAN DR (0.4 miles)</td>
             <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
