--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:27 AM</td>
+            <td data-label="Incident">Attempt to Serve</td>
+            <td data-label="Street Name">RIVERSIDE DR</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">THIRD AVE W (148.4 feet) and FOURTH AVE W (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:12 AM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">NORTH FORK RD</td>
