--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               
           <tr>
             <td data-label="Time Reported">11:27 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Threats</td>
             <td data-label="Street Name">HEWETT CREEK RD</td>
             <td data-label="City">JEFFREY</td>
             <td data-label="Cross Streets">SPENCER CIR (0.4 miles) and MARK LN (0.5 miles)</td>
@@ -182,7 +182,7 @@
             <td data-label="Street Name">ELLIS FORK RD</td>
             <td data-label="City">CHAPMANVILLE</td>
             <td data-label="Cross Streets">NORTH FORK RD (58.7 feet) and FERRELL BR (0.5 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority, Whitesville EMS</td>
           </tr>
         
             </tbody>
