--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:06 PM</td>
+            <td data-label="Incident">Attempt to Serve</td>
+            <td data-label="Street Name">MEADOW FORK RD</td>
+            <td data-label="City">HEWETT</td>
+            <td data-label="Cross Streets">MIKES FORK RD (0.1 miles) and KIRK LN (0.5 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:21 AM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">COAL RIVER RD</td>
