--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:42 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">BALLARD HOLLOW RD</td>
+            <td data-label="City">FOSTER</td>
+            <td data-label="Cross Streets">DANIEL BOONE PKWY (147.2 feet) and GINGERWOOD LN (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:21 PM</td>
             <td data-label="Incident">Unknown Problem</td>
             <td data-label="Street Name">THIRD STREET</td>
