--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:30 PM</td>
+            <td data-label="Incident">Investigations</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">SYLVESTER</td>
+            <td data-label="Cross Streets">PROTAN LN (0.4 miles) and SKEENS LN (0.5 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:22 PM</td>
             <td data-label="Incident">Scheduled Transport</td>
             <td data-label="Street Name">KENMORE DR</td>
