--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">01:30 PM</td>
-            <td data-label="Incident">Investigations</td>
-            <td data-label="Street Name">COAL RIVER RD</td>
-            <td data-label="City">SYLVESTER</td>
-            <td data-label="Cross Streets">PROTAN LN (0.4 miles) and SKEENS LN (0.5 miles)</td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Time Reported">01:39 PM</td>
+            <td data-label="Incident">Injured Person</td>
+            <td data-label="Street Name">SHREVE DR</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">SPRUCE RIVER RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
