--- a/index.html
+++ b/index.html
@@ -155,16 +155,7 @@
             <td data-label="Street Name">MADISON AVE</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">ORCHARD DR (0.1 miles) and HILL VIEW DR (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">03:11 PM</td>
-            <td data-label="Incident">Fight</td>
-            <td data-label="Street Name">DUKE LN</td>
-            <td data-label="City">JEFFREY</td>
-            <td data-label="Cross Streets">BIAS BRANCH RD (221.1 feet)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office, WV State Police</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
