--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:18 PM</td>
+            <td data-label="Incident">Welfare Check</td>
+            <td data-label="Street Name">SPRUCE RIVER RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">MADISON CIR (0.1 miles) and DAVID GREEN DR (0.2 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:32 PM</td>
             <td data-label="Incident">Transport Back to Residence</td>
             <td data-label="Street Name">MADISON AVE</td>
