--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name"></td>
             <td data-label="City"></td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Whitesville PD</td>
           </tr>
         
           <tr>
@@ -164,7 +164,7 @@
             <td data-label="Street Name">SIERRA ST</td>
             <td data-label="City">JEFFREY</td>
             <td data-label="Cross Streets">JEFFREY WAY (50.5 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
             </tbody>
