--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
           <tr>
             <td data-label="Time Reported">12:04 AM</td>
             <td data-label="Incident">911 Open Line</td>
-            <td data-label="Street Name">SIERRA ST</td>
+            <td data-label="Street Name">SPRUCE RIVER RD</td>
             <td data-label="City">JEFFREY</td>
-            <td data-label="Cross Streets">JEFFREY WAY (50.5 feet)</td>
+            <td data-label="Cross Streets">SECOAL CIR (0.1 miles) and BIAS BRANCH RD (0.5 miles)</td>
             <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
