--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:38 AM</td>
+            <td data-label="Incident">Medical Alarm</td>
+            <td data-label="Street Name">LICK CREEK RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">CENTRAL AVE (0.1 miles) and KENMORE DR (161.8 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:35 AM</td>
             <td data-label="Incident">Death</td>
             <td data-label="Street Name">HERMAN DOLIN HOLLOW RD</td>
