--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">PRENTER RD</td>
             <td data-label="City">SETH</td>
             <td data-label="Cross Streets">SCHOOL HOUSE RD (44.1 feet) and SCHOOL HOUSE RD (78.9 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
             </tbody>
