--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:19 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">HANLEY LN</td>
+            <td data-label="City">RACINE</td>
+            <td data-label="Cross Streets">DANIEL BOONE PKWY (146.8 feet)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">07:49 AM</td>
             <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">PRENTER RD</td>
