--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:00 AM</td>
+            <td data-label="Incident">Reckless Driver</td>
+            <td data-label="Street Name">WATER WAY</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY NB (0.2 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:41 AM</td>
             <td data-label="Incident">Tree Down</td>
             <td data-label="Street Name">JAMES BRANCH RD</td>
