--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">TRICORN RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">ROBERT C BYRD FWY SB (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office, Danville PD</td>
           </tr>
         
           <tr>
