Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:54 AM</td>
+            <td data-label="Incident">Breaking and Entering</td>
+            <td data-label="Street Name">SMOOT AVE</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">NOLBERT ST (0.1 miles) and BROAD ST (0.1 miles)</td>
+            <td data-label="Responding Agencies">Danville PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:40 AM</td>
             <td data-label="Incident">Animal Complaint/Rescue</td>
             <td data-label="Street Name">TRICORN RD</td>
