--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <tr>
             <td data-label="Time Reported">10:54 AM</td>
             <td data-label="Incident">Breaking and Entering</td>
-            <td data-label="Street Name">SMOOT AVE</td>
+            <td data-label="Street Name">SMOOT AVE4</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">NOLBERT ST (0.1 miles) and BROAD ST (0.1 miles)</td>
             <td data-label="Responding Agencies">Danville PD</td>
