--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:40 PM</td>
+            <td data-label="Incident">Stolen Property</td>
+            <td data-label="Street Name">COXS FORK RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">CHERRYWOOD DR (0.1 miles) and PERRY MOUNTAIN RD (0.4 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:12 AM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
