--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:14 PM</td>
+            <td data-label="Incident">Traffic Stop</td>
+            <td data-label="Street Name">COURT ST</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">AVE B (106.6 feet) and AVE C (171.5 feet)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:40 PM</td>
             <td data-label="Incident">Stolen Property</td>
             <td data-label="Street Name">COXS FORK RD</td>
