--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:52 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">ROBERT C BYRD FWY SB</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">RACCOON BRANCH RD (0.6 miles) and MUD RIVER RD (0.6 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:40 PM</td>
             <td data-label="Incident">Stolen Property</td>
             <td data-label="Street Name">COXS FORK RD</td>
