--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:40 PM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">GEORGIA LN</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">LICK CREEK RD (75.5 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:21 PM</td>
             <td data-label="Incident">Injured Person</td>
             <td data-label="Street Name">JACKSON AVE</td>
