--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">GEORGIA LN</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">LICK CREEK RD (75.5 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
