--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:04 PM</td>
+            <td data-label="Incident">Seizure</td>
+            <td data-label="Street Name">LEE AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">MADISON AVE (0.1 miles) and PALMER PL (0.2 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:40 PM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">GEORGIA LN</td>
