--- a/index.html
+++ b/index.html
@@ -155,16 +155,7 @@
             <td data-label="Street Name">MUD RIVER RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">LUCAS LN (115.6 feet) and BARKER LN (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">09:12 AM</td>
-            <td data-label="Incident">Interfacility Transport</td>
-            <td data-label="Street Name">MADISON AVE</td>
-            <td data-label="City">MADISON</td>
-            <td data-label="Cross Streets">ORCHARD DR (0.1 miles) and HILL VIEW DR (0.1 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
             </tbody>
