--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:35 PM</td>
+            <td data-label="Incident">Threats</td>
+            <td data-label="Street Name">SPRUCE RIVER RD</td>
+            <td data-label="City">OTTAWA</td>
+            <td data-label="Cross Streets">PEBBLE BROOK LN (0.2 miles) and EBONY LN (0.2 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">07:24 PM</td>
             <td data-label="Incident">Injured Person</td>
             <td data-label="Street Name">WASHINGTON AVE</td>
