--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:15 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">EMMONS RD</td>
+            <td data-label="City">ASHFORD</td>
+            <td data-label="Cross Streets">PREP PLANT RD (1.3 miles) and FORK CREEK RD N (0.9 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:17 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">HILL VALLEY DR</td>
