--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:58 PM</td>
+            <td data-label="Incident">Seizure</td>
+            <td data-label="Street Name">SPRUCE RIVER RD</td>
+            <td data-label="City">JEFFREY</td>
+            <td data-label="Cross Streets">HEWETT CREEK RD (0.2 miles) and SECOAL CIR (0.2 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:15 PM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
