--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:42 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">SIX MILE RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">NOBLE LN (0.1 miles) and CRANBERRY LN (0.5 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:58 PM</td>
             <td data-label="Incident">Seizure</td>
             <td data-label="Street Name">SPRUCE RIVER RD</td>
