Updating incident data

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">12:42 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Fire - Structure</td>
             <td data-label="Street Name">SIX MILE RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">NOBLE LN (0.1 miles) and CRANBERRY LN (0.5 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Spruce River VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
