--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">12:42 AM</td>
-            <td data-label="Incident">Fire - Structure</td>
-            <td data-label="Street Name">SIX MILE RD</td>
-            <td data-label="City">DANVILLE</td>
-            <td data-label="Cross Streets">NOBLE LN (0.1 miles) and CRANBERRY LN (0.5 miles)</td>
-            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Spruce River VFD, Boone County Ambulance Authority</td>
+            <td data-label="Time Reported">01:13 AM</td>
+            <td data-label="Incident">Fire - Electrical</td>
+            <td data-label="Street Name">BEAR WALLOW RD</td>
+            <td data-label="City">FOSTER</td>
+            <td data-label="Cross Streets">WALNUT HILL RD (153.9 feet) and ROCK CREEK RD (0.4 miles)</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD</td>
           </tr>
         
           <tr>
