--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">01:13 AM</td>
-            <td data-label="Incident">Fire - Electrical</td>
-            <td data-label="Street Name">BEAR WALLOW RD</td>
-            <td data-label="City">FOSTER</td>
-            <td data-label="Cross Streets">WALNUT HILL RD (153.9 feet) and ROCK CREEK RD (0.4 miles)</td>
-            <td data-label="Responding Agencies">Danville VFD, Madison VFD</td>
+            <td data-label="Time Reported">01:31 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">MIDDLE HORSE CREEK RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">JULIAN RD (0.4 miles)</td>
+            <td data-label="Responding Agencies"></td>
           </tr>
         
           <tr>
