--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">01:31 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Emotion Dist Person</td>
             <td data-label="Street Name">MIDDLE HORSE CREEK RD</td>
             <td data-label="City">JULIAN</td>
             <td data-label="Cross Streets">JULIAN RD (0.4 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
