Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:08 AM</td>
+            <td data-label="Incident">Fire - Other</td>
+            <td data-label="Street Name">CHAP RD</td>
+            <td data-label="City">VAN</td>
+            <td data-label="Cross Streets">WOODRAIL LN (0.1 miles) and COVE LN (0.1 miles)</td>
+            <td data-label="Responding Agencies">Van VFD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:31 AM</td>
             <td data-label="Incident">Emotion Dist Person</td>
             <td data-label="Street Name">MIDDLE HORSE CREEK RD</td>
