--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:02 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">38.068818, -81.822159</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets">RIVERSIDE DR (193.9 feet) and THIRD ST W (226.4 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:15 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">EMMONS RD</td>
