--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:45 AM</td>
+            <td data-label="Incident">Choking</td>
+            <td data-label="Street Name">HENDRICKS LN</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">MUD RIVER RD (0.3 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:25 AM</td>
             <td data-label="Incident">Stolen Vehicle</td>
             <td data-label="Street Name">SIX MILE RD</td>
