--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <td data-label="Street Name">SIX MILE RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">TIN LN (0.1 miles) and BLUE SKIES LN (0.5 miles)</td>
-            <td data-label="Responding Agencies">WV State Police</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority, WV State Police</td>
           </tr>
         
             </tbody>
