--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">09:51 AM</td>
-            <td data-label="Incident">Seizure</td>
+            <td data-label="Incident">Unconscious</td>
             <td data-label="Street Name">SMOOT AVE</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">CINDY & SISSY ST (169.4 feet) and FOURTH ST (227.1 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Danville VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
