Updating incident data

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
           <tr>
             <td data-label="Time Reported">01:23 PM</td>
             <td data-label="Incident">MVC - Injury</td>
-            <td data-label="Street Name">SPRUCE RIVER RD</td>
-            <td data-label="City">DANVILLE</td>
-            <td data-label="Cross Streets">FAIR CHANCE RD (49.7 feet) and CHAMBERS DR (1.3 miles)</td>
+            <td data-label="Street Name">S MAIN ST</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">WOODLAND DR (0.0 miles) and SPRUCE RIVER RD (0.2 miles)</td>
             <td data-label="Responding Agencies">Danville VFD, Madison VFD, Boone County Ambulance Authority, Madison PD</td>
           </tr>
         
