--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">S MAIN ST</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">FRANKLIN AVE (48.0 feet) and HIGHPOINT LN (223.2 feet)</td>
-            <td data-label="Responding Agencies">Madison PD</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Boone County Ambulance Authority, Madison PD</td>
           </tr>
         
           <tr>
@@ -164,7 +164,7 @@
             <td data-label="Street Name">COAL RIVER RD</td>
             <td data-label="City">COMFORT</td>
             <td data-label="Cross Streets">EDENS LN (160.5 feet) and MCCLUNG DR (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
