--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:19 PM</td>
+            <td data-label="Incident">Motor Vehicle Collision</td>
+            <td data-label="Street Name">LOW GAP RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">POPLAR HILLS RD (82.4 feet) and ROBERT C BYRD FWY NB (82.4 feet)</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Boone County Ambulance Authority, Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:06 PM</td>
             <td data-label="Incident">Motor Vehicle Collision</td>
             <td data-label="Street Name">S MAIN ST</td>
