Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:50 PM</td>
+            <td data-label="Incident">Cardiac Arrest</td>
+            <td data-label="Street Name">EASTWOOD LN</td>
+            <td data-label="City">VAN</td>
+            <td data-label="Cross Streets">CHAP RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Van VFD, Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:06 PM</td>
             <td data-label="Incident">Motor Vehicle Collision</td>
             <td data-label="Street Name">S MAIN ST</td>
