--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               
           <tr>
             <td data-label="Time Reported">03:20 PM</td>
-            <td data-label="Incident">MVC - No Injury</td>
+            <td data-label="Incident">MVC - Unknown</td>
             <td data-label="Street Name">PROTAN LN</td>
             <td data-label="City">SYLVESTER</td>
             <td data-label="Cross Streets">COAL RIVER RD (186.6 feet)</td>
