--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name"></td>
             <td data-label="City"></td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Madison VFD, Van VFD, Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Madison VFD, Van VFD, Boone County Ambulance Authority, Whitesville EMS</td>
           </tr>
         
           <tr>
