--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:36 PM</td>
+            <td data-label="Incident">MVC - Unknown</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">WHITESVILLE</td>
+            <td data-label="Cross Streets">COAL RIVER RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:20 PM</td>
             <td data-label="Incident">MVC - Unknown</td>
             <td data-label="Street Name">PROTAN LN</td>
