--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">COAL RIVER RD</td>
             <td data-label="City">WHITESVILLE</td>
             <td data-label="Cross Streets">COAL RIVER RD (0.1 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Racine VFD, Whitesville VFD, Boone County Ambulance Authority, WV State Police</td>
           </tr>
         
           <tr>
