Updating incident data

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
           <tr>
             <td data-label="Time Reported">03:20 PM</td>
             <td data-label="Incident">MVC - Unknown</td>
-            <td data-label="Street Name"></td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
+            <td data-label="Street Name">PROTAN LN</td>
+            <td data-label="City">SYLVESTER</td>
+            <td data-label="Cross Streets">COAL RIVER RD (48.0 feet)</td>
             <td data-label="Responding Agencies">Racine VFD, Whitesville VFD, Whitesville EMS, WV State Police</td>
           </tr>
         
