--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
         
           <tr>
             <td data-label="Time Reported">04:01 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Traffic Hazard</td>
             <td data-label="Street Name">WATER WAY</td>
             <td data-label="City">JULIAN</td>
             <td data-label="Cross Streets">ROBERT C BYRD FWY NB (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Danville VFD</td>
           </tr>
         
           <tr>
