--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:44 PM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">SYLVESTER</td>
+            <td data-label="Cross Streets">RUTH AVE (228.2 feet) and BRANHAM HEIGHTS RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Whitesville EMS</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:04 PM</td>
             <td data-label="Incident">MVC - Unknown</td>
             <td data-label="Street Name">LOW GAP RD</td>
