Updating incident data

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">06:12 PM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name">RIDGEVIEW MT</td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Incident">MVC - No Injury</td>
+            <td data-label="Street Name">RIDGEVIEW NELLIS RD</td>
+            <td data-label="City">RIDGEVIEW</td>
+            <td data-label="Cross Streets">CLELL WOODRUM LN (0.1 miles) and CAMP CREEK RD (0.3 miles)</td>
+            <td data-label="Responding Agencies">Danville VFD, Racine VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
