--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">06:52 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Domestic Violence</td>
             <td data-label="Street Name">CHESTNUT LN</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">SPRUCE RIVER RD (144.8 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
