Updating incident data

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">SIX MILE RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">TIN LN (0.0 miles) and JARRELL DR (0.3 miles)</td>
-            <td data-label="Responding Agencies">Spruce River VFD, Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Spruce River VFD, Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
