Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:10 AM</td>
+            <td data-label="Incident">Burglar Alarm - Audible</td>
+            <td data-label="Street Name">POND FORK RD</td>
+            <td data-label="City">VAN</td>
+            <td data-label="Cross Streets">SIDNEY ST (243.2 feet) and CHURCH ST (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:51 PM</td>
             <td data-label="Incident">Arrest</td>
             <td data-label="Street Name">BENJAMIN PRICE BRIDGE RD</td>
