Updating incident data

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
         
           <tr>
             <td data-label="Time Reported">10:41 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Gunshot Wound</td>
             <td data-label="Street Name">EMMONS RD</td>
             <td data-label="City">ASHFORD</td>
             <td data-label="Cross Streets">LOWER WHITEOAK RD (0.1 miles) and VIRGINIA DR (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
