Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:07 AM</td>
+            <td data-label="Incident">Investigations</td>
+            <td data-label="Street Name">WYOMING COUNTY</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets">INDIAN CREEK RD (44.0 feet) and VINE DR (113.7 feet)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:00 AM</td>
             <td data-label="Incident">MVC - No Injury</td>
             <td data-label="Street Name">DOG HOLLOW RD</td>
