Updating incident data

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">COAL AVE</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">SECOND ST (98.8 feet) and SMOOT AVE E (179.4 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Madison VFD</td>
           </tr>
         
           <tr>
