Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:12 PM</td>
+            <td data-label="Incident">Attempt to Serve</td>
+            <td data-label="Street Name">WASHINGTON AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">THIRD ST (54.0 feet) and STEVEN ST (133.2 feet)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:00 PM</td>
             <td data-label="Incident">Hit & Run</td>
             <td data-label="Street Name">SMOOT AVE</td>
