Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:54 PM</td>
+            <td data-label="Incident">Robbery</td>
+            <td data-label="Street Name">HEWITT TOWN CIRCLE</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets">HEWETT TOWN CIR (47.2 feet) and HEWETT TOWN CIR (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:32 PM</td>
             <td data-label="Incident">Animal Bite</td>
             <td data-label="Street Name">FOSTER RD</td>
