Updating incident data

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
           <tr>
             <td data-label="Time Reported">06:54 PM</td>
             <td data-label="Incident">Robbery</td>
-            <td data-label="Street Name">HEWITT TOWN CIRCLE</td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets">HEWETT TOWN CIR (47.2 feet) and HEWETT TOWN CIR (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Street Name">HEWETT TOWN CIR</td>
+            <td data-label="City">HEWETT</td>
+            <td data-label="Cross Streets">HEWETT CREEK RD (219.2 feet) and HEWETT CREEK RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
