Updating incident data

--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
             <td data-label="Street Name">SANTA LN</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">PRICE LN (96.7 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
             <td data-label="Time Reported">09:33 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Traffic Hazard</td>
             <td data-label="Street Name">ROBERT C BYRD FWY SB</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets"></td>
