Updating incident data

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">RISTER LN</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">PRICE BRANCH RD (148.2 feet)</td>
-            <td data-label="Responding Agencies">Danville VFD</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD</td>
           </tr>
         
           <tr>
