Updating incident data

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         
           <tr>
             <td data-label="Time Reported">12:31 PM</td>
-            <td data-label="Incident">Motor Vehicle Collision</td>
+            <td data-label="Incident">MVC - No Injury</td>
             <td data-label="Street Name">TONEYS BRANCH RD</td>
             <td data-label="City">BLOOMINGROSE</td>
             <td data-label="Cross Streets">PETERS MOUNTAIN RD (213.0 feet) and MOUNTAIN DR (0.1 miles)</td>
