Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:15 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">MEADOW FORK RD</td>
+            <td data-label="City">HEWETT</td>
+            <td data-label="Cross Streets">MIKES FORK RD (0.3 miles) and KIRK LN (0.3 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:51 PM</td>
             <td data-label="Incident">Domestic Non-Violent</td>
             <td data-label="Street Name">LOW GAP RD</td>
