Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:22 PM</td>
+            <td data-label="Incident">Welfare Check</td>
+            <td data-label="Street Name">GORE HOLLOW RD</td>
+            <td data-label="City">PEYTONA</td>
+            <td data-label="Cross Streets">GORE HOLLOW RD (49.7 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:55 PM</td>
             <td data-label="Incident">Theft</td>
             <td data-label="Street Name">ELLIS FORK RD</td>
