Updating incident data

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">07:22 PM</td>
-            <td data-label="Incident">Welfare Check</td>
+            <td data-label="Incident">Search & Rescue</td>
             <td data-label="Street Name">GORE HOLLOW RD</td>
             <td data-label="City">PEYTONA</td>
             <td data-label="Cross Streets">GORE HOLLOW RD (49.7 feet)</td>
-            <td data-label="Responding Agencies">WV State Police</td>
+            <td data-label="Responding Agencies">Racine VFD, WV State Police</td>
           </tr>
         
           <tr>
