Updating incident data

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <td data-label="Time Reported">02:44 AM</td>
             <td data-label="Incident">Fight</td>
             <td data-label="Street Name">RIDGEWVIEW NELLIS RD</td>
-            <td data-label="City">NELLIS</td>
+            <td data-label="City">COSTA</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
@@ -164,7 +164,7 @@
             <td data-label="Street Name">JOHNS HOLLOW RD</td>
             <td data-label="City">NELLIS</td>
             <td data-label="Cross Streets">PINEWOOD DR (46.8 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
             </tbody>
