Updating incident data

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
           <tr>
             <td data-label="Time Reported">02:44 AM</td>
             <td data-label="Incident">Fight</td>
-            <td data-label="Street Name">RIDGEWVIEW NELLIS RD</td>
-            <td data-label="City">COSTA</td>
-            <td data-label="Cross Streets"></td>
+            <td data-label="Street Name">RIDGEVIEW NELLIS RD</td>
+            <td data-label="City">NELLIS</td>
+            <td data-label="Cross Streets">KIRKWOOD DR (0.5 miles) and COSTA RD (0.5 miles)</td>
             <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
