Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:53 PM</td>
+            <td data-label="Incident">Fire - Structure</td>
+            <td data-label="Street Name">DANIEL BOONE PKWY</td>
+            <td data-label="City">PEYTONA</td>
+            <td data-label="Cross Streets">BURNSIDE BRANCH RD (0.1 miles) and MORGAN BRANCH RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Danville VFD, Racine VFD, Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:33 PM</td>
             <td data-label="Incident">Stolen Vehicle</td>
             <td data-label="Street Name">ASHFORD NELLIS RD</td>
