Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">06:22 AM</td>
-            <td data-label="Incident">Unknown Problem</td>
-            <td data-label="Street Name">COAL RIVER RD</td>
-            <td data-label="City">COMFORT</td>
+            <td data-label="Time Reported">07:46 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">JULIAN RD</td>
+            <td data-label="City"></td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies"></td>
           </tr>
         
           <tr>
