Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,17 +150,8 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">02:25 PM</td>
-            <td data-label="Incident">Traffic Stop</td>
-            <td data-label="Street Name"></td>
-            <td data-label="City">STRINGTOWN</td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
-          </tr>
-        
-          <tr>
             <td data-label="Time Reported">02:20 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Animal Complaint/Rescue</td>
             <td data-label="Street Name">PRENTER RD</td>
             <td data-label="City">PRENTERH</td>
             <td data-label="Cross Streets"></td>
