Updating incident data

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <td data-label="Time Reported">06:07 PM</td>
             <td data-label="Incident">Test Call</td>
             <td data-label="Street Name">CHELSEA LN</td>
-            <td data-label="City">HOLLY HILLS</td>
+            <td data-label="City">CITY OF MADISON</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies"></td>
           </tr>
