Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">06:07 PM</td>
-            <td data-label="Incident">Test Call</td>
-            <td data-label="Street Name">CHELSEA LN</td>
-            <td data-label="City">CITY OF MADISON</td>
+            <td data-label="Time Reported">06:21 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">BOLT MOUNTAIN</td>
+            <td data-label="City"></td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies"></td>
           </tr>
