Updating incident data

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
           <tr>
             <td data-label="Time Reported">05:51 PM</td>
             <td data-label="Incident">Call Through Office</td>
-            <td data-label="Street Name"></td>
-            <td data-label="City"></td>
+            <td data-label="Street Name">SIX MILE RD</td>
+            <td data-label="City">SIX MILEROGERS</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
