Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:20 PM</td>
+            <td data-label="Incident">Fight</td>
+            <td data-label="Street Name">THIRD STREET</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Madison PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">08:15 PM</td>
             <td data-label="Incident">Investigations</td>
             <td data-label="Street Name">SHORT CREEK RD</td>
