Updating incident data

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">NAVY LN</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Whitesville EMS</td>
           </tr>
         
           <tr>
@@ -181,15 +181,6 @@
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">LESAGE LN</td>
             <td data-label="City">ASHFORD</td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">01:19 AM</td>
-            <td data-label="Incident">Interfacility Transport</td>
-            <td data-label="Street Name">MADISON AVE</td>
-            <td data-label="City">MADISON</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
