Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:18 PM</td>
+            <td data-label="Incident">Motor Vehicle Collision</td>
+            <td data-label="Street Name">GRACE AND TATES</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Boone County Ambulance Authority, Danville PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:55 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">RUSTIC LN</td>
