Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:15 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">SMOOT AVE</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">CINDY & SISSY ST (117.4 feet) and THIRD ST (153.3 feet)</td>
+            <td data-label="Responding Agencies">WV State Police</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:14 PM</td>
             <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">COAL RIVER RD</td>
