Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:23 PM</td>
+            <td data-label="Incident">Animal Complaint/Rescue</td>
+            <td data-label="Street Name">HEARTLAND DR</td>
+            <td data-label="City">TWILIGHT</td>
+            <td data-label="Cross Streets">TROUT ST (102.8 feet) and RANGER ST (219.7 feet)</td>
+            <td data-label="Responding Agencies">WV State Police</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:01 PM</td>
             <td data-label="Incident">Animal Complaint/Rescue</td>
             <td data-label="Street Name">HUDSON LN</td>
