Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:26 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">PETERS ST</td>
+            <td data-label="City">SYLVESTER</td>
+            <td data-label="Cross Streets">DAVIS RD (36.0 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:22 PM</td>
             <td data-label="Incident">Suspicious Vehicle</td>
             <td data-label="Street Name">POND FORK RD</td>
