Updating incident data

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">04:26 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Burglar Alarm - Audible</td>
             <td data-label="Street Name">PETERS ST</td>
             <td data-label="City">SYLVESTER</td>
             <td data-label="Cross Streets">DAVIS RD (36.0 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
