Updating incident data

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">WOODRAIL LN</td>
             <td data-label="City">VAN</td>
             <td data-label="Cross Streets">CHAP RD (187.1 feet) and CHAP RD (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
