Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:45 AM</td>
+            <td data-label="Incident">Motor Vehicle Collision</td>
+            <td data-label="Street Name">RAMAGE R</td>
+            <td data-label="City">JEFFREY</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Spruce River VFD, Boone County Ambulance Authority, Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">08:00 AM</td>
             <td data-label="Incident">Motor Vehicle Collision</td>
             <td data-label="Street Name">OLD RIVER RD</td>
