Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:29 AM</td>
+            <td data-label="Incident">Stroke</td>
+            <td data-label="Street Name">LICK CREEK RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">FREEMONT LN (209.2 feet) and YATES LN (0.5 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:23 AM</td>
             <td data-label="Incident">Injured Person</td>
             <td data-label="Street Name">HORSE BRANCH HOLLOW RD</td>
