Updating incident data

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">01:22 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Unconscious</td>
             <td data-label="Street Name">PARK AVE</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">FIFTH ST (123.0 feet) and LUMBER ST (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
