Updating incident data

--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">08:43 PM</td>
-            <td data-label="Incident">Traffic Hazard</td>
-            <td data-label="Street Name">ROBERT C BYRD</td>
+            <td data-label="Time Reported">10:23 PM</td>
+            <td data-label="Incident">Burns</td>
+            <td data-label="Street Name">IRELAND CIR</td>
             <td data-label="City">DANVILLE</td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office, WV State Police</td>
+            <td data-label="Cross Streets">VENTRUE DR (91.7 feet) and NILS LN (0.2 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
