Updating incident data

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">11:55 PM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name">38.086847, -81.815239</td>
+            <td data-label="Incident">Harassment</td>
+            <td data-label="Street Name">JULIAN AREA</td>
             <td data-label="City"></td>
-            <td data-label="Cross Streets">FIELDCREST LN (128.6 feet) and RISTER LN (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
